--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ GNU idutils NEWS                                      -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** Bug fixes
+
+  lid is no longer susceptible to a buffer overrun
+
 
 * Noteworthy changes in release 4.6 (2012-02-03) [stable]
 
